# si-mandatory1

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: rust.yml
api/: Dockerfile  pyproject.toml
api/app/: config.py  document.py  main.py  utils.py
go_api/: Dockerfile  document.go  go.mod  go.sum  main.go  routes.go  util.go
letsencrypt/: acme.json
rust_api/: Cargo.toml  Dockerfile
rust_api/src/: document.rs  main.rs  routes.rs  state.rs
web/: Dockerfile  package.json
web/src/: app.html  variables.ts
web/src/components/: form.svelte  loginForm.svelte  messageForm.svelte  mitIdLogin.svelte  navbar.svelte  readMessagesForm.svelte  register.svelte  registerForm.svelte  table.svelte  userTable.svelte
web/src/routes/: __layout.svelte  index.svelte  login.svelte  overview.svelte  register.svelte
web/src/stores/: jwt.ts
