[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.4.8"
mongodb = "2.1.0"
tokio = "1"
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
tower-http = { version = "0.2.4", features = ["trace"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
