[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.4.8", features = ["ws", "multipart"] }
mongodb = "2.1.0"
futures-util = "0.3"
tokio = "1"
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
tower-http = { version = "0.2.4", features = ["trace", "cors"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
